# hybridRAG

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
src/rag/: __init__.py  config.py  pipeline.py
src/rag/api/: __main__.py  server.py
src/rag/embed/: __init__.py  bge_m3.py
src/rag/generate/: __init__.py  ollama_client.py
src/rag/ingest/: __init__.py  chunker.py  loader.py
src/rag/retrieve/: __init__.py  hybrid.py  reranker.py
src/rag/scripts/: __init__.py  ingest.py  query.py
src/rag/store/: __init__.py  bm25_store.py  chroma_store.py
tests/: test_hybrid.py  test_loader.py  test_pipeline.py  test_pipeline_mock.py
